Made name bold, and invitee options not bold, so they don't wrap away from radio button anymore.

--- a/Website/src/less/main.less
+++ b/Website/src/less/main.less
@@ -112,12 +112,19 @@
 		}
 	}
 
+	p.attendeename {
+		font-weight: bold;
+	}
+
 	#attendance form {
 		width: 300px;
 		margin-left: auto;
 		margin-right: auto;
 		p {
 			text-align: left;
+		}
+		label {
+			font-weight: normal;
 		}
 	}
 }
